# $Id: Makefile.am 1467 2008-10-06 10:18:17Z lukasz $
#
# FedStage DRMAA for LSF
# Copyright (C) 2007-2008  FedStage Systems
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = \
 autoclean.sh \
 autogen.sh \
 m4/missing-dev-prog.sh

SUBDIRS = drmaa_utils lsf_drmaa doc
